Mon Jun 10 17:14:01 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (RVALUE_PROMOTE): fix parameter name (`x' to `obj')
	  and make it inline function (like RVALUE_PROMOTE).

Mon Jun 10 16:22:50 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (rb_ary_new_from_values): add assertion
	  (ary should be young object).

Mon Jun 10 16:05:59 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (wmap_mark): check allocation of `w->obj2wmap'.
	  (no-allocation `w->obj2wmap' will be NULL pointer reference)

Mon Jun 10 15:36:00 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_error.c (error_print): use checking functions instead of
	  catching exceptions.

	* eval_error.c (error_print): restore errinfo for the case new
	  exception raised while printing the message.  [ruby-core:55365]
	  [Bug #8501]

	* eval_error.c (error_print): reduce calling setjmp.

Mon Jun 10 12:10:06 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (integer_unpack_num_bdigits_small: Extracted from
	  rb_integer_unpack.
	  (integer_unpack_num_bdigits_generic): Ditto.
	  (integer_unpack_num_bdigits_bytes): New function.
	  (rb_integer_unpack): Use above functions.
	  Return a Bignum for INTEGER_PACK_FORCE_BIGNUM even when the result
	  is zero.

Mon Jun 10 05:38:23 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (absint_numwords_small): New function.
	  (absint_numwords_generic): Use absint_numwords_small if possible.

Mon Jun 10 01:07:57 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (absint_numwords_bytes): New function.
	  (absint_numwords_generic): Extracted from rb_absint_numwords.
	  (rb_absint_numwords): Use absint_numwords_bytes if possible.

Sun Jun  9 21:33:15 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_absint_numwords): Return (size_t)-1 when overflow.
	  Refine variable names.
	  (rb_absint_size): Refine variable names.

	* internal.h (rb_absint_size): Refine an argument name.
	  (rb_absint_numwords): Ditto.

Sun Jun  9 16:51:41 2013  Tanaka Akira  <akr@fsij.org>
